@startuml

title __COURSES's Class Diagram__\n

  namespace com.Model.Courses {
    class com.Model.Courses.Course {
        ~ mods : ArrayList<Module>
        - cancelStatus : Boolean
        - courseCode : String
        - courseName : String
        - enrolledStatus : int
        - level : String
        + Course()
        + cancelCourse()
        + selectCourse()
        + setEnrolledStatus()
    }
  }
  

  namespace com.Model.Courses {
    class com.Model.Courses.Module {
        - credits : int
        - instructorName : String
        - marksSecured : Double
        - moduleCode : String
        - moduleName : String
        - moduleType : String
        - semester : int
        + Module()
        + Module()
        + getStudentModule()
        + moduleInfo()
        + numOfCoreModule()
        + numOfModule()
        + numOfOptionalModule()
        + selectCoreModule()
        + selectCoreSemester()
        + selectGrade()
        + selectModule()
        + selectModule()
        + selectModule()
        + selectModule()
        + selectModule()
        + selectModules()
        + selectOptionalModule()
        + selectOptionalModules()
        + totalNumOfCoreModules()
        + totalNumOfModules()
        + totalNumOfOptionalModules()
    }
  }
  

  com.Model.Courses.Course o-- com.Controller.ManageDbUtils : manageDbUtils
  com.Model.Courses.Course o-- com.Model.Courses.Module : module


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
